Fixing feature #504 Support for template in mailing list notifications
git-svn-id: https://www.silverpeas.org/svn/silverpeas/components/trunk@2176 a8e77078-a1c7-4fa5-b8fc-53c5178a176c